src/main/java/com/imag/netah/runtime/lang/ESCExprParser.java
// Generated from /Users/epaln/NetBeansProjects/nespros/src/main/java/com/imag/nespros/runtime/lang/ESCExpr.g4 by ANTLR 4.2.2
package com.imag.netah.runtime.lang;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ESCExprParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__19=1, T__18=2, T__17=3, T__16=4, T__15=5, T__14=6, T__13=7, T__12=8, 
		T__11=9, T__10=10, T__9=11, T__8=12, T__7=13, T__6=14, T__5=15, T__4=16, 
		T__3=17, T__2=18, T__1=19, T__0=20, SELECTIONMODE=21, OR=22, AND=23, FILTER=24, 
		FIRST=25, SEQ=26, LAST=27, STREAM=28, BATCH=29, MBATCH=30, WITHIN=31, 
		SLIDING=32, ID=33, STRING=34, TRUE=35, FALSE=36, LT=37, GT=38, EQ=39, 
		NEQ=40, LEQ=41, GEQ=42, INT=43, DOUBLE=44, WS=45;
	public static final String[] tokenNames = {
		"<INVALID>", "'memory'", "']'", "'avg'", "'max'", "')'", "','", "'min'", 
		"'['", "'@'", "':'", "'('", "'&&'", "'||'", "'{'", "'sum'", "'cpu_time'", 
		"'}'", "'parameters'", "'count'", "'selection_mode'", "SELECTIONMODE", 
		"OR", "AND", "FILTER", "'first'", "'seq'", "'last'", "STREAM", "'batch'", 
		"'mbatch'", "'within'", "'sliding'", "ID", "STRING", "'true'", "'false'", 
		"'<'", "'>'", "'='", "'!='", "'<='", "'>='", "INT", "DOUBLE", "WS"
	};
	public static final int
		RULE_expression = 0, RULE_esc_expression = 1, RULE_streamdef = 2, RULE_window_specification = 3, 
		RULE_batch_n = 4, RULE_mbatch = 5, RULE_timefixed = 6, RULE_slidingwin = 7, 
		RULE_operator_def = 8, RULE_operator_type = 9, RULE_filterdef = 10, RULE_predicate = 11, 
		RULE_or_expression = 12, RULE_and_expression = 13, RULE_term = 14, RULE_aggregate = 15, 
		RULE_sum = 16, RULE_average = 17, RULE_count = 18, RULE_min = 19, RULE_max = 20, 
		RULE_params = 21, RULE_param = 22, RULE_dimension = 23, RULE_memory_spec = 24, 
		RULE_cpu_spec = 25, RULE_selection_mode = 26;
	public static final String[] ruleNames = {
		"expression", "esc_expression", "streamdef", "window_specification", "batch_n", 
		"mbatch", "timefixed", "slidingwin", "operator_def", "operator_type", 
		"filterdef", "predicate", "or_expression", "and_expression", "term", "aggregate", 
		"sum", "average", "count", "min", "max", "params", "param", "dimension", 
		"memory_spec", "cpu_spec", "selection_mode"
	};

	@Override
	public String getGrammarFileName() { return "ESCExpr.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ESCExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ExpressionContext extends ParserRuleContext {
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public Esc_expressionContext esc_expression() {
			return getRuleContext(Esc_expressionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54); esc_expression();
			setState(60);
			_la = _input.LA(1);
			if (_la==18) {
				{
				setState(55); match(18);
				setState(56); match(14);
				setState(57); params();
				setState(58); match(17);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Esc_expressionContext extends ParserRuleContext {
		public Operator_defContext operator_def() {
			return getRuleContext(Operator_defContext.class,0);
		}
		public StreamdefContext streamdef() {
			return getRuleContext(StreamdefContext.class,0);
		}
		public Window_specificationContext window_specification() {
			return getRuleContext(Window_specificationContext.class,0);
		}
		public Esc_expressionContext esc_expression(int i) {
			return getRuleContext(Esc_expressionContext.class,i);
		}
		public List<Esc_expressionContext> esc_expression() {
			return getRuleContexts(Esc_expressionContext.class);
		}
		public Esc_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_esc_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).enterEsc_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).exitEsc_expression(this);
		}
	}

	public final Esc_expressionContext esc_expression() throws RecognitionException {
		Esc_expressionContext _localctx = new Esc_expressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_esc_expression);
		int _la;
		try {
			setState(78);
			switch (_input.LA(1)) {
			case STREAM:
				enterOuterAlt(_localctx, 1);
				{
				setState(62); streamdef();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(63); operator_def();
				setState(64); match(11);
				setState(65); esc_expression();
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==6) {
					{
					{
					setState(66); match(6);
					setState(67); esc_expression();
					}
					}
					setState(72);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(73); match(5);
				setState(76);
				_la = _input.LA(1);
				if (_la==10) {
					{
					setState(74); match(10);
					setState(75); window_specification();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StreamdefContext extends ParserRuleContext {
		public TerminalNode STREAM() { return getToken(ESCExprParser.STREAM, 0); }
		public TerminalNode ID() { return getToken(ESCExprParser.ID, 0); }
		public StreamdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_streamdef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).enterStreamdef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).exitStreamdef(this);
		}
	}

	public final StreamdefContext streamdef() throws RecognitionException {
		StreamdefContext _localctx = new StreamdefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_streamdef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80); match(STREAM);
			setState(81); match(11);
			setState(82); match(ID);
			setState(83); match(5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Window_specificationContext extends ParserRuleContext {
		public SlidingwinContext slidingwin() {
			return getRuleContext(SlidingwinContext.class,0);
		}
		public Batch_nContext batch_n() {
			return getRuleContext(Batch_nContext.class,0);
		}
		public MbatchContext mbatch() {
			return getRuleContext(MbatchContext.class,0);
		}
		public TimefixedContext timefixed() {
			return getRuleContext(TimefixedContext.class,0);
		}
		public Window_specificationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_window_specification; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).enterWindow_specification(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).exitWindow_specification(this);
		}
	}

	public final Window_specificationContext window_specification() throws RecognitionException {
		Window_specificationContext _localctx = new Window_specificationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_window_specification);
		try {
			setState(89);
			switch (_input.LA(1)) {
			case BATCH:
				enterOuterAlt(_localctx, 1);
				{
				setState(85); batch_n();
				}
				break;
			case MBATCH:
				enterOuterAlt(_localctx, 2);
				{
				setState(86); mbatch();
				}
				break;
			case WITHIN:
				enterOuterAlt(_localctx, 3);
				{
				setState(87); timefixed();
				}
				break;
			case SLIDING:
				enterOuterAlt(_localctx, 4);
				{
				setState(88); slidingwin();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Batch_nContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(ESCExprParser.INT, 0); }
		public TerminalNode BATCH() { return getToken(ESCExprParser.BATCH, 0); }
		public Batch_nContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_batch_n; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).enterBatch_n(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).exitBatch_n(this);
		}
	}

	public final Batch_nContext batch_n() throws RecognitionException {
		Batch_nContext _localctx = new Batch_nContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_batch_n);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91); match(BATCH);
			setState(92); match(11);
			setState(93); match(INT);
			setState(94); match(5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MbatchContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(ESCExprParser.INT); }
		public TerminalNode MBATCH() { return getToken(ESCExprParser.MBATCH, 0); }
		public TerminalNode INT(int i) {
			return getToken(ESCExprParser.INT, i);
		}
		public MbatchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mbatch; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).enterMbatch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).exitMbatch(this);
		}
	}

	public final MbatchContext mbatch() throws RecognitionException {
		MbatchContext _localctx = new MbatchContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_mbatch);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96); match(MBATCH);
			setState(97); match(11);
			setState(98); match(INT);
			setState(99); match(6);
			setState(100); match(INT);
			setState(101); match(5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimefixedContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(ESCExprParser.INT); }
		public TerminalNode WITHIN() { return getToken(ESCExprParser.WITHIN, 0); }
		public TerminalNode INT(int i) {
			return getToken(ESCExprParser.INT, i);
		}
		public TimefixedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_timefixed; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).enterTimefixed(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).exitTimefixed(this);
		}
	}

	public final TimefixedContext timefixed() throws RecognitionException {
		TimefixedContext _localctx = new TimefixedContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_timefixed);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103); match(WITHIN);
			setState(104); match(11);
			setState(105); match(INT);
			setState(106); match(6);
			setState(107); match(INT);
			setState(108); match(5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SlidingwinContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(ESCExprParser.INT); }
		public TerminalNode SLIDING() { return getToken(ESCExprParser.SLIDING, 0); }
		public TerminalNode INT(int i) {
			return getToken(ESCExprParser.INT, i);
		}
		public SlidingwinContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_slidingwin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).enterSlidingwin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).exitSlidingwin(this);
		}
	}

	public final SlidingwinContext slidingwin() throws RecognitionException {
		SlidingwinContext _localctx = new SlidingwinContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_slidingwin);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110); match(SLIDING);
			setState(111); match(11);
			setState(112); match(INT);
			setState(113); match(6);
			setState(114); match(INT);
			setState(115); match(5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Operator_defContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ESCExprParser.ID, 0); }
		public Operator_typeContext operator_type() {
			return getRuleContext(Operator_typeContext.class,0);
		}
		public Operator_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).enterOperator_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).exitOperator_def(this);
		}
	}

	public final Operator_defContext operator_def() throws RecognitionException {
		Operator_defContext _localctx = new Operator_defContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_operator_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); match(ID);
			setState(118); match(9);
			setState(119); operator_type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Operator_typeContext extends ParserRuleContext {
		public TerminalNode FIRST() { return getToken(ESCExprParser.FIRST, 0); }
		public FilterdefContext filterdef() {
			return getRuleContext(FilterdefContext.class,0);
		}
		public TerminalNode AND() { return getToken(ESCExprParser.AND, 0); }
		public TerminalNode SEQ() { return getToken(ESCExprParser.SEQ, 0); }
		public TerminalNode OR() { return getToken(ESCExprParser.OR, 0); }
		public AggregateContext aggregate() {
			return getRuleContext(AggregateContext.class,0);
		}
		public TerminalNode LAST() { return getToken(ESCExprParser.LAST, 0); }
		public Operator_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).enterOperator_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).exitOperator_type(this);
		}
	}

	public final Operator_typeContext operator_type() throws RecognitionException {
		Operator_typeContext _localctx = new Operator_typeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_operator_type);
		try {
			setState(128);
			switch (_input.LA(1)) {
			case 3:
			case 4:
			case 7:
			case 15:
			case 19:
				enterOuterAlt(_localctx, 1);
				{
				setState(121); aggregate();
				}
				break;
			case FILTER:
				enterOuterAlt(_localctx, 2);
				{
				setState(122); filterdef();
				}
				break;
			case AND:
				enterOuterAlt(_localctx, 3);
				{
				setState(123); match(AND);
				}
				break;
			case OR:
				enterOuterAlt(_localctx, 4);
				{
				setState(124); match(OR);
				}
				break;
			case SEQ:
				enterOuterAlt(_localctx, 5);
				{
				setState(125); match(SEQ);
				}
				break;
			case FIRST:
				enterOuterAlt(_localctx, 6);
				{
				setState(126); match(FIRST);
				}
				break;
			case LAST:
				enterOuterAlt(_localctx, 7);
				{
				setState(127); match(LAST);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FilterdefContext extends ParserRuleContext {
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public TerminalNode FILTER() { return getToken(ESCExprParser.FILTER, 0); }
		public FilterdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filterdef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).enterFilterdef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).exitFilterdef(this);
		}
	}

	public final FilterdefContext filterdef() throws RecognitionException {
		FilterdefContext _localctx = new FilterdefContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_filterdef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130); match(FILTER);
			setState(131); match(8);
			setState(132); predicate();
			setState(133); match(2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredicateContext extends ParserRuleContext {
		public Or_expressionContext or_expression() {
			return getRuleContext(Or_expressionContext.class,0);
		}
		public PredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).enterPredicate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).exitPredicate(this);
		}
	}

	public final PredicateContext predicate() throws RecognitionException {
		PredicateContext _localctx = new PredicateContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_predicate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135); or_expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Or_expressionContext extends ParserRuleContext {
		public And_expressionContext and_expression(int i) {
			return getRuleContext(And_expressionContext.class,i);
		}
		public List<And_expressionContext> and_expression() {
			return getRuleContexts(And_expressionContext.class);
		}
		public Or_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_or_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).enterOr_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).exitOr_expression(this);
		}
	}

	public final Or_expressionContext or_expression() throws RecognitionException {
		Or_expressionContext _localctx = new Or_expressionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_or_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137); and_expression();
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==13) {
				{
				{
				setState(138); match(13);
				setState(139); and_expression();
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class And_expressionContext extends ParserRuleContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public And_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_and_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).enterAnd_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).exitAnd_expression(this);
		}
	}

	public final And_expressionContext and_expression() throws RecognitionException {
		And_expressionContext _localctx = new And_expressionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_and_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145); term();
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==12) {
				{
				{
				setState(146); match(12);
				setState(147); term();
				}
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public Token sign;
		public Token val;
		public TerminalNode GEQ() { return getToken(ESCExprParser.GEQ, 0); }
		public TerminalNode INT() { return getToken(ESCExprParser.INT, 0); }
		public TerminalNode TRUE() { return getToken(ESCExprParser.TRUE, 0); }
		public TerminalNode ID() { return getToken(ESCExprParser.ID, 0); }
		public TerminalNode DOUBLE() { return getToken(ESCExprParser.DOUBLE, 0); }
		public TerminalNode EQ() { return getToken(ESCExprParser.EQ, 0); }
		public TerminalNode NEQ() { return getToken(ESCExprParser.NEQ, 0); }
		public TerminalNode LT() { return getToken(ESCExprParser.LT, 0); }
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public TerminalNode LEQ() { return getToken(ESCExprParser.LEQ, 0); }
		public TerminalNode GT() { return getToken(ESCExprParser.GT, 0); }
		public TerminalNode STRING() { return getToken(ESCExprParser.STRING, 0); }
		public TerminalNode FALSE() { return getToken(ESCExprParser.FALSE, 0); }
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).exitTerm(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_term);
		int _la;
		try {
			setState(162);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(153); match(ID);
				setState(154);
				((TermContext)_localctx).sign = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LT) | (1L << GT) | (1L << EQ) | (1L << NEQ) | (1L << LEQ) | (1L << GEQ))) != 0)) ) {
					((TermContext)_localctx).sign = (Token)_errHandler.recoverInline(this);
				}
				consume();
				setState(155);
				((TermContext)_localctx).val = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING) | (1L << INT) | (1L << DOUBLE))) != 0)) ) {
					((TermContext)_localctx).val = (Token)_errHandler.recoverInline(this);
				}
				consume();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 2);
				{
				setState(156); match(11);
				setState(157); predicate();
				setState(158); match(5);
				}
				break;
			case TRUE:
				enterOuterAlt(_localctx, 3);
				{
				setState(160); match(TRUE);
				}
				break;
			case FALSE:
				enterOuterAlt(_localctx, 4);
				{
				setState(161); match(FALSE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AggregateContext extends ParserRuleContext {
		public MinContext min() {
			return getRuleContext(MinContext.class,0);
		}
		public MaxContext max() {
			return getRuleContext(MaxContext.class,0);
		}
		public CountContext count() {
			return getRuleContext(CountContext.class,0);
		}
		public SumContext sum() {
			return getRuleContext(SumContext.class,0);
		}
		public AverageContext average() {
			return getRuleContext(AverageContext.class,0);
		}
		public AggregateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aggregate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).enterAggregate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ESCExprListener ) ((ESCExprListener)listener).exitAggregate(this);
		}
	}

	public final AggregateContext aggregate() throws RecognitionException {
		AggregateContext _localctx = new AggregateContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_aggregate);
		try {
			setState(169);
			switch (_input.LA(1)) {
			case 3:
				enterOuterAlt(_localctx, 1);
				{
				setState(164); average();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 2);
				{
				setState(165); sum();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 3);
				{
				setState(166); count();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 4);
				{
				setState(167); min();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 5);
				{
				setState(168); max();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
